--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,12 +19,8 @@ jobs:
           utcOffset: "+08:00"
       - name: Use current time
         env:
-          TIME: "${{ steps.current-time.outputs.time }}"
-          R_TIME: "${{ steps.current-time.outputs.readableTime }}"
-          F_TIME: "${{ steps.current-time.outputs.formattedTime }}"
-          YEAR: "${{ steps.current-time.outputs.year }}"
-          DAY: "${{ steps.current-time.outputs.day }}"
-        run: echo $TIME $R_TIME $F_TIME $YEAR $DAY
+          TIME: "${{ steps.current-time.outputs.ISOTime }}"
+        run: echo $TIME 
       - name: Release
         uses: softprops/action-gh-release@v1
         with:
