--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -16,7 +16,7 @@ jobs:
     - name: install dependencies
       run:  pip3 install pyyaml
 
-    - name: check baseurl
+    - name: check files exist
       id: baseurl
       run: |
     
